force-app/main/default/objects/Parking_Notice__c/Parking_Notice__c.object-meta.xml
<CustomObject>
    <description>BN
BLDG
To track vehicle exemptions/violations
Manually created.</description>
    <label>Parking Notice</label>
    <nameField>
        <displayFormat>Notice-{0000}</displayFormat>
        <label>Parking Notice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Parking Notices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>