force-app/main/default/objects/Parking_Notice__c/fields/Date_Filter__c.field-meta.xml
<CustomField>
    <fullName>Date_Filter__c</fullName>
    <description>BN
BLDG Parking
To get Date from Date/Time so we can filter list views
Auto pop from formula</description>
    <formula>DATEVALUE( Date_Time__c )</formula>
    <label>Date Filter</label>
    <type>Date</type>
</CustomField>