force-app/main/default/objects/Parking_Notice__c/fields/Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Date_Time__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>BN
BLDG
To track vehicle exemptions/violations
Manually created.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date/Time</label>
    <type>DateTime</type>
</CustomField>