force-app/main/default/objects/Parking_Notice__c/fields/Description_Notes__c.field-meta.xml
<CustomField>
    <fullName>Description_Notes__c</fullName>
    <description>BN
BLDG
To track vehicle exemptions/violations
Manually created.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Description/Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>