force-app/main/default/objects/Parking_Notice__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>BN
BLDG
To track vehicle exemptions/violations
Manually created.</description>
    <label>Location</label>
    <referenceTo>Space__c</referenceTo>
    <relationshipLabel>Parking Notices</relationshipLabel>
    <relationshipName>Parking_Notices</relationshipName>
    <type>Lookup</type>
</CustomField>