force-app/main/default/objects/Parking_Notice__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>BN
BLDG
To track vehicle exemptions/violations
Manually created.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exemption</fullName>
            </value>
            <value>
                <fullName>Violation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>