force-app/main/default/objects/Parking_Notice__c/fields/Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Vehicle__c</fullName>
    <description>BN
BLDG
To track vehicle exemptions/violations
Manually created.</description>
    <label>Vehicle</label>
    <referenceTo>Vehicle__c</referenceTo>
    <relationshipLabel>Parking Notices</relationshipLabel>
    <relationshipName>Parking_Notices</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>