force-app/main/default/objects/Parking_Notice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Vehicle__c</columns>
    <columns>Type__c</columns>
    <columns>Date_Time__c</columns>
    <columns>Description_Notes__c</columns>
    <columns>Location__c</columns>
    <filterScope>Everything</filterScope>
    <label>Parking Notice - All</label>
</ListView>