force-app/main/default/objects/Parking_Notice__c/listViews/Parking_Notice_Violation_All.listView-meta.xml
<ListView>
    <fullName>Parking_Notice_Violation_All</fullName>
    <columns>NAME</columns>
    <columns>Location__c</columns>
    <columns>Date_Time__c</columns>
    <columns>Vehicle__c</columns>
    <columns>Description_Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Violation</value>
    </filters>
    <label>Parking Notice - Violations All</label>
</ListView>